# httrip

./: README.md  example.py  httriop.py  pyproject.toml  server.py
httrip/: __init__.py  core.py  http.py  request.py  routing.py  state.py
