[tool.poetry]
name = "httrip"
version = "0.1.0"
description = "Tiny proof-of-concept HTTP framework for Trio"
authors = ["L3viathan <git@l3vi.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
trio = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
